deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gomeet
  labels:
    name: gomeet
    environment: production
